# gpt-sovits-local

./: .gitignore  AGENTS.md  deploy-4-colab.sh  pyproject.toml
GPT_SoVITS/: s2_train.py  utils.py
GPT_SoVITS/module/: data_utils.py  models.py  models_onnx.py
server/: .env  asr_processor.py  audio_slicer.py  config.py  feature_extractor.py  logger.py  models_loader.py  proxy.py  sync_models.py  trainer.py  uvr5_processor.py
tools/uvr5/: bsroformer.py
